@@ -5,6 +5,7 @@ elvi.1sr.gz @mandir@/man1/amazon.1sr.gz
 elvi.1sr.gz @mandir@/man1/archpkg.1sr.gz
 elvi.1sr.gz @mandir@/man1/arxiv.1sr.gz
 elvi.1sr.gz @mandir@/man1/ask.1sr.gz
+elvi.1sr.gz @mandir@/man1/aur.1sr.gz
 elvi.1sr.gz @mandir@/man1/austlii.1sr.gz
 elvi.1sr.gz @mandir@/man1/bbcnews.1sr.gz
 elvi.1sr.gz @mandir@/man1/cddb.1sr.gz
