@@ -15,11 +15,12 @@
 
 				  N E W S
 
-Thu Oct 23 04:55:07 BST 2008  - surfraw 2.2.4
+Fri Feb 27 03:49:43 GMT 2009  - surfraw 2.2.4
 
   * New elvi:
     + ntrs, scicom, springer - Thanks to Wim Van Hoydonck.
-    + urban - Thanks to J. R. Mauro
+    + urban - Thanks to J. R. Mauro.
+    + aur - Thanks to René Reigel.
   * Fixed excite elvis.
 
 Sat Sep 13 20:40:01 BST 2008  - surfraw 2.2.3
