@@ -2,7 +2,7 @@ surfraw (2.2.4-1) unstable; urgency=low
 
   * New upstream version.
 
- -- Ian Beckwith <ianb@erislabs.net>  Thu, 23 Oct 2008 04:57:04 +0100
+ -- Ian Beckwith <ianb@erislabs.net>  Fri, 27 Feb 2009 03:50:23 +0000
 
 surfraw (2.2.3-1) unstable; urgency=low
 
