@@ -1,3 +1,7 @@
+2009-02-27  Ian Beckwith  <ianb@erislabs.net>
+
+	* New elvis: aur. Thanks to René Reigel.
+
 2008-12-03  Ian Beckwith  <ianb@erislabs.net>
 
 	* New elvis: urban. Thanks to J. R. Mauro.
